derive/tests/ui/arg_to_disable_bounds_checks.stderr
error: expected string literal
 --> tests/ui/arg_to_disable_bounds_checks.rs:5:33
  |
5 |     #[indexland(bounds_checks = true)]
  |                                 ^^^^
