derive/tests/ui/arg_to_disable_bounds_checks.rs
use indexland::Idx;

fn main() {
    #[derive(Idx)]
    #[indexland(bounds_checks = true)]
    pub enum Bar {
        A,
        B,
    }
}
